--- a/FlightStatus/FlightStatus/Base.lproj/LaunchScreen.storyboard
+++ b/FlightStatus/FlightStatus/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PlaneSightHome" translatesAutoresizingMaskIntoConstraints="NO" id="stl-Xn-4Uq">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="stl-Xn-4Uq" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Rdj-9o-R34"/>
+                            <constraint firstAttribute="trailing" secondItem="stl-Xn-4Uq" secondAttribute="trailing" id="crl-sY-q9a"/>
+                            <constraint firstItem="stl-Xn-4Uq" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="izr-I1-RLB"/>
+                            <constraint firstItem="stl-Xn-4Uq" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="mnR-wy-Gjt"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +35,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="PlaneSightHome" width="640" height="1136"/>
+    </resources>
 </document>
