--- a/FlightStatus/FlightStatus/Base.lproj/Main.storyboard
+++ b/FlightStatus/FlightStatus/Base.lproj/Main.storyboard
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="4gi-dJ-nLO">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="80w-lP-1Lx">
+            <objects>
+                <navigationController id="4gi-dJ-nLO" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2Jw-80-HfE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ImR-uE-YDu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GVS-o8-3Ig" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-386" y="388"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -18,55 +34,77 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M7e-Me-tbv">
-                                <rect key="frame" x="252" y="90" width="97" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Example: AA 716" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M7e-Me-tbv" userLabel="flightNumber">
+                                <rect key="frame" x="236" y="154" width="129" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="M7e-Me-tbv" secondAttribute="height" multiplier="97:30" id="RN7-Zz-d9b"/>
+                                    <constraint firstAttribute="width" secondItem="M7e-Me-tbv" secondAttribute="height" multiplier="97:30" id="Tkh-Uu-fxc"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="M5q-La-e6C"/>
+                                </connections>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Please enter a Flight Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mfh-31-nrZ">
-                                <rect key="frame" x="185" y="61" width="230" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Departure Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MH5-HG-sYq">
-                                <rect key="frame" x="239" y="151" width="122" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IjD-bt-FpG">
-                                <rect key="frame" x="252" y="180" width="97" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter a Flight Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mfh-31-nrZ" userLabel="promptFlightNumber">
+                                <rect key="frame" x="189" y="130" width="222" height="21"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" secondItem="mfh-31-nrZ" secondAttribute="height" multiplier="74:7" id="5Hp-mF-nME"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IjD-bt-FpG" userLabel="departDate">
+                                <rect key="frame" x="252" y="249" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="IjD-bt-FpG" secondAttribute="height" multiplier="97:30" id="3Jp-v6-zJd"/>
                                     <constraint firstAttribute="width" secondItem="IjD-bt-FpG" secondAttribute="height" multiplier="97:30" id="7rn-vf-8nA"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="dyF-Cc-Fob"/>
+                                </connections>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hel-UJ-DhE">
-                                <rect key="frame" x="274" y="242" width="52" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hel-UJ-DhE">
+                                <rect key="frame" x="276" y="451" width="49" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="hel-UJ-DhE" secondAttribute="height" multiplier="49:30" id="dV0-N9-NmQ"/>
+                                </constraints>
                                 <state key="normal" title="Submit"/>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter a Departure Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MH5-HG-sYq" userLabel="promptDate">
+                                <rect key="frame" x="185" y="210" width="231" height="41"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="MH5-HG-sYq" secondAttribute="height" multiplier="118:21" id="gRh-5X-bRf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="hel-UJ-DhE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Dwk-dS-nD0"/>
-                            <constraint firstItem="mfh-31-nrZ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-228.5" id="H6H-6r-wlq"/>
-                            <constraint firstItem="M7e-Me-tbv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-195" id="Ltp-iD-5A6"/>
-                            <constraint firstItem="hel-UJ-DhE" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-43" id="TWP-Gp-qJB"/>
-                            <constraint firstItem="IjD-bt-FpG" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-105" id="Zsx-8D-QrE"/>
-                            <constraint firstItem="M7e-Me-tbv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-195" id="am1-O4-yxC"/>
+                            <constraint firstItem="mfh-31-nrZ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-159.5" id="H6H-6r-wlq"/>
+                            <constraint firstItem="M7e-Me-tbv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-126" id="Ltp-iD-5A6"/>
+                            <constraint firstItem="hel-UJ-DhE" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="166" id="TWP-Gp-qJB"/>
+                            <constraint firstItem="IjD-bt-FpG" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-36" id="Zsx-8D-QrE"/>
+                            <constraint firstItem="M7e-Me-tbv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-126" id="am1-O4-yxC"/>
                             <constraint firstItem="MH5-HG-sYq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hJj-xP-XKx"/>
                             <constraint firstItem="IjD-bt-FpG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="i0C-oh-IAA"/>
-                            <constraint firstItem="MH5-HG-sYq" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-138.5" id="lCm-hr-tzq"/>
+                            <constraint firstItem="MH5-HG-sYq" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-69.5" id="lCm-hr-tzq"/>
                             <constraint firstItem="mfh-31-nrZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qlw-kn-WPw"/>
-                            <constraint firstItem="IjD-bt-FpG" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-105" id="ujP-65-obp"/>
+                            <constraint firstItem="IjD-bt-FpG" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-36" id="ujP-65-obp"/>
                             <constraint firstItem="M7e-Me-tbv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="whI-Z8-daO"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="vCQ-Te-1bY"/>
+                    <connections>
+                        <outlet property="departDate" destination="IjD-bt-FpG" id="nvx-kB-UFU"/>
+                        <outlet property="flightNumber" destination="M7e-Me-tbv" id="xpJ-nb-lSH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
